more errors changed

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		style="font-family: Moon Flower,MoonFlower;">
 			<a class="no-underline text-white" href="motion.html">Motion</a> | <a class=
 			"no-underline text-white" href="photography.html">Photography</a> |
-			<a class="no-underline text-white" href="#contact" style="">Contact</a>
+			<a class="no-underline text-white" href="#contact" style>Contact</a>
 		</nav>
 
 		<div class="max-w-full">
@@ -86,7 +86,7 @@
 				<div alt="aboutText" class=
 				"font-sans container block mx-auto text-white text-lg flex-col p-3" style=
 				"font-family: 'Roboto';">
-					<p class="">
+					<p class>
 						Steffi-Ann Mendoza is a student at California State University,
 						Northridge. She is part of the Cinema and Television Arts program, with
 						an emphasis in Multimedia Production. She was the secretary for Los
