--- a/motion.html
+++ b/motion.html
@@ -44,7 +44,7 @@
 		style="font-family: Moon Flower,MoonFlower;">
 			<a class="no-underline text-white" href="motion.html">Motion</a> | <a class=
 			"no-underline text-white" href="photography.html">Photography</a> |
-			<a class="no-underline text-white" href="#contact" style="">Contact</a>
+			<a class="no-underline text-white" href="#contact" style>Contact</a>
 		</nav>
 
 		<div class="max-w-full">
@@ -64,61 +64,61 @@
 			<div class="container mx-auto">
 				<div class="flex flex-wrap w-full container mx-auto lg:-mx-4 mb-32">
 					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-						<a data-desc="Cinematographer, Editor, SFX" data-lity="" data-title=
+						<a data-desc="Cinematographer, Editor, SFX" data-lity data-title=
 						"CSUN Student Life - Growth: Beyond the Classroom Episode 2" href=
 						"https://www.youtube.com/watch?v=aZmwnHTRnGc"><img src=
 						"motionthumb/thumb9.jpg"></a>
 					</div>
 
 					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-						<a data-desc="2018" data-lity="" data-title="Stop Motion Test" href=
+						<a data-desc="2018" data-lity data-title="Stop Motion Test" href=
 						"https://www.youtube.com/watch?v=1H7bqSu00og"><img src=
 						"motionthumb/thumb1.jpg"></a>
 					</div>
 
 					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-						<a data-desc="Cinematographer, Editor, SFX" data-lity="" data-title=
+						<a data-desc="Cinematographer, Editor, SFX" data-lity data-title=
 						"Outside" href="https://www.youtube.com/watch?v=a0UuivpQo28"><img src=
 						"motionthumb/thumb2.jpg"></a>
 					</div>
 
 					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-						<a data-desc="Cinematographer, Editor" data-lity="" data-title=
+						<a data-desc="Cinematographer, Editor" data-lity data-title=
 						"Teenline Promotional Video" href=
 						"https://www.youtube.com/watch?v=WYvcxS8EGp4"><img src=
 						"motionthumb/thumb3.jpg"></a>
 					</div>
 
 					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-						<a data-desc="Cinematographer, SFX" data-lity="" data-title=
+						<a data-desc="Cinematographer, SFX" data-lity data-title=
 						"Fuck Boy Away" href=
 						"https://www.youtube.com/watch?v=4HMnJGnxURY"><img src=
 						"motionthumb/thumb4.jpg"></a>
 					</div>
 
 					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-						<a data-desc="Writer, Cinematographer, Editor" data-lity="" data-title=
+						<a data-desc="Writer, Cinematographer, Editor" data-lity data-title=
 						"Girls Gone Gore" href=
 						"https://www.youtube.com/watch?v=k0tQrRsMkeo"><img src=
 						"motionthumb/thumb5.jpg"></a>
 					</div>
 
 					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-						<a data-desc="Cinematographer, Editor" data-lity="" data-title=
+						<a data-desc="Cinematographer, Editor" data-lity data-title=
 						"Harajuku Walk 2016" href=
 						"https://www.youtube.com/watch?v=sUQGZL3LXNk"><img src=
 						"motionthumb/thumb6.jpg"></a>
 					</div>
 
 					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-						<a data-desc="Cinematographer, Editor, SFX, Music" data-lity=""
+						<a data-desc="Cinematographer, Editor, SFX, Music" data-lity
 						data-title="Outer Space Girl" href=
 						"https://www.youtube.com/watch?v=X1hqAayq4is"><img src=
 						"motionthumb/thumb7.jpg"></a>
 					</div>
 
 					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-						<a data-desc="Audio, Cinematographer" data-lity="" data-title="Alex Romo"
+						<a data-desc="Audio, Cinematographer" data-lity data-title="Alex Romo"
 						href="https://www.youtube.com/watch?v=2zqMP6g0Fxk"><img src=
 						"motionthumb/thumb8.jpg"></a>
 					</div>
@@ -140,7 +140,7 @@
 				<div alt="aboutText" class=
 				"font-sans container block mx-auto text-white text-lg flex-col p-3" style=
 				"font-family: 'Roboto';">
-					<p class="">
+					<p>
 						Steffi-Ann Mendoza is a student at California State University,
 						Northridge. She is part of the Cinema and Television Arts program, with
 						an emphasis in Multimedia Production. She was the secretary for Los
