--- a/photography.html
+++ b/photography.html
@@ -45,7 +45,7 @@
 			style="font-family: Moon Flower,MoonFlower;">
 				<a class="no-underline text-white" href="motion.html">Motion</a> |
 				<a class="no-underline text-white" href="photography.html">Photography</a>
-				| <a class="no-underline text-white" href="#contact" style="">Contact</a>
+				| <a class="no-underline text-white" href="#contact" style>Contact</a>
 			</nav>
 
 			<div class="max-w-full">
@@ -65,7 +65,7 @@
 				<div class="container mx-auto">
 					<div class="flex flex-wrap w-full container mx-auto lg:-mx-4 mb-32">
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2016" data-lity="" data-lity-desc=
+							<a data-desc="2016" data-lity data-lity-desc=
 							"Four friends double exposed over flowers." data-title="Four Friends"
 							href="gallery/Image19.jpg"><img alt=
 							"Four friends double exposed over flowers" src=
@@ -73,7 +73,7 @@
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2016" data-lity="" data-lity-desc=
+							<a data-desc="2016" data-lity data-lity-desc=
 							"A cat and a headless bird double exposure" data-title="Untitled" href=
 							"gallery/Image18.jpg"><img alt=
 							"A cat and a headless bird double exposure" src=
@@ -81,14 +81,14 @@
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2016" data-lity="" data-lity-desc=
+							<a data-desc="2016" data-lity data-lity-desc=
 							"Neon signs double exposed." data-title="Double" href=
 							"gallery/Image04.jpg"><img alt="Neon signs double exposed" src=
 							"gallery/Image04.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2017" data-lity="" data-lity-desc=
+							<a data-desc="2017" data-lity data-lity-desc=
 							"A boy sitting with his knees to his chest" data-title="John in Japan"
 							href="gallery/Image15.jpg"><img alt=
 							"A boy sitting with his knees to his chest" src=
@@ -96,7 +96,7 @@
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2016" data-lity="" data-lity-desc=
+							<a data-desc="2016" data-lity data-lity-desc=
 							"A woman with red hair holding a gun to her lips." data-title="Maritza"
 							href="gallery/Image06.jpg"><img alt=
 							"A woman with red hair holding a gun to her lips" src=
@@ -104,7 +104,7 @@
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2017" data-lity="" data-lity-desc=
+							<a data-desc="2017" data-lity data-lity-desc=
 							"Japanese train station double exposed with the train patrons."
 							data-title="Japanese Train Station" href="gallery/Image07.jpg"><img alt=
 							"Japanese train station double exposed with the train patrons" src=
@@ -112,39 +112,39 @@
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2017" data-lity="" data-lity-desc=
+							<a data-desc="2017" data-lity data-lity-desc=
 							"Inside a Japanese train." data-title="Japanese Train Station 2" href=
 							"gallery/Image08.jpg"><img alt="Inside a Japanese train" src=
 							"gallery/Image08.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2017" data-lity="" data-lity-desc=
+							<a data-desc="2017" data-lity data-lity-desc=
 							"A train coming into the station." data-title="Japanese Train Station 3"
 							href="gallery/Image09.jpg"><img src="gallery/Image09.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a alt="A train coming into the station" data-desc="2017" data-lity=""
+							<a alt="A train coming into the station" data-desc="2017" data-lity
 							data-lity-desc="A Japanese Shrine" data-title="Untitled" href=
 							"gallery/Image10.jpg"><img src="gallery/Image10.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a alt="Japanese paper cranes" data-desc="2017" data-lity=""
+							<a alt="Japanese paper cranes" data-desc="2017" data-lity
 							data-lity-desc="Japanese paper cranes." data-title="Cranes" href=
 							"gallery/Image11.jpg"><img src="gallery/Image11.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2018" data-lity="" data-lity-desc=
+							<a data-desc="2018" data-lity data-lity-desc=
 							"A headless bird over a bed of flowers" data-title="Untitled" href=
 							"gallery/Image12.jpg"><img alt="A headless bird over a bed of flowers"
 							src="gallery/Image12.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2017" data-lity="" data-lity-desc=
+							<a data-desc="2017" data-lity data-lity-desc=
 							"A busy street in Akihabara" data-title="Akihabara" href=
 							"gallery/Image13.jpg"><img alt="A busy street in Akihabara" src=
 							"gallery/Image13.jpg"></a>
@@ -167,7 +167,7 @@
 					<div alt="aboutText" class=
 					"font-sans container block mx-auto text-white text-lg flex-col p-3" style=
 					"font-family: 'Roboto';">
-						<p class="">
+						<p class>
 							Steffi-Ann Mendoza is a student at California State University,
 							Northridge. She is part of the Cinema and Television Arts program, with
 							an emphasis in Multimedia Production. She was the secretary for Los
