--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						"assets/images/twitter.png" alt="twitter"></a> <a class="inline-block p-5" href=
 						"#"><img src="assets/images/linkdin.png" alt="linkdin"></a> <a class="inline-block p-5"
 						href="#"><img src="assets/images/vimeo.png" alt="vimeo"></a> <a class=
-						"inline-block p-5" href="#"><img src="assets/Images/youtube.png" alt="youtube"></a>
+						"inline-block p-5" href="#"><img src="assets/images/youtube.png" alt="youtube"></a>
 					</div>
 					<!-- footer -->
 
