--- a/motion.html
+++ b/motion.html
@@ -67,32 +67,32 @@
 						<a data-desc="Cinematographer, Editor, SFX" data-lity data-title=
 						"CSUN Student Life - Growth: Beyond the Classroom Episode 2" href=
 						"https://www.youtube.com/watch?v=aZmwnHTRnGc"><img src=
-						"motionthumb/thumb9.jpg"></a>
+						"motionthumb/thumb9.jpg" alt="Build PODER"></a>
 					</div>
 
 					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 						<a data-desc="2018" data-lity data-title="Stop Motion Test" href=
 						"https://www.youtube.com/watch?v=1H7bqSu00og"><img src=
-						"motionthumb/thumb1.jpg"></a>
+						"motionthumb/thumb1.jpg" alt="Stop Motion test"></a>
 					</div>
 
 					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 						<a data-desc="Cinematographer, Editor, SFX" data-lity data-title=
 						"Outside" href="https://www.youtube.com/watch?v=a0UuivpQo28"><img src=
-						"motionthumb/thumb2.jpg"></a>
+						"motionthumb/thumb2.jpg" alt="Outside"></a>
 					</div>
 
 					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 						<a data-desc="Cinematographer, Editor" data-lity data-title=
 						"Teenline Promotional Video" href=
 						"https://www.youtube.com/watch?v=WYvcxS8EGp4"><img src=
-						"motionthumb/thumb3.jpg"></a>
+						"motionthumb/thumb3.jpg" alt="Teenline"></a>
 					</div>
 
 					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 						<a data-desc="Cinematographer, SFX" data-lity data-title=
 						"Fuck Boy Away" href=
-						"https://www.youtube.com/watch?v=4HMnJGnxURY"><img src=
+						"https://www.youtube.com/watch?v=4HMnJGnxURY" alt="Fuck Boy Away"><img src=
 						"motionthumb/thumb4.jpg"></a>
 					</div>
 
@@ -100,13 +100,13 @@
 						<a data-desc="Writer, Cinematographer, Editor" data-lity data-title=
 						"Girls Gone Gore" href=
 						"https://www.youtube.com/watch?v=k0tQrRsMkeo"><img src=
-						"motionthumb/thumb5.jpg"></a>
+						"motionthumb/thumb5.jpg" alt="Girls Gone Gore"></a>
 					</div>
 
 					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 						<a data-desc="Cinematographer, Editor" data-lity data-title=
 						"Harajuku Walk 2016" href=
-						"https://www.youtube.com/watch?v=sUQGZL3LXNk"><img src=
+						"https://www.youtube.com/watch?v=sUQGZL3LXNk" alt="Harajuku Walk 2016"><img src=
 						"motionthumb/thumb6.jpg"></a>
 					</div>
 
@@ -114,12 +114,12 @@
 						<a data-desc="Cinematographer, Editor, SFX, Music" data-lity
 						data-title="Outer Space Girl" href=
 						"https://www.youtube.com/watch?v=X1hqAayq4is"><img src=
-						"motionthumb/thumb7.jpg"></a>
+						"motionthumb/thumb7.jpg" alt="outer Space Girl"></a>
 					</div>
 
 					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 						<a data-desc="Audio, Cinematographer" data-lity data-title="Alex Romo"
-						href="https://www.youtube.com/watch?v=2zqMP6g0Fxk"><img src=
+						href="https://www.youtube.com/watch?v=2zqMP6g0Fxk" alt="Alex Romo"><img src=
 						"motionthumb/thumb8.jpg"></a>
 					</div>
 				</div>
@@ -169,7 +169,7 @@
 						"assets/images/twitter.png" alt="twitter"></a> <a class="inline-block p-5" href=
 						"#"><img src="assets/images/linkdin.png" alt="linkdin"></a> <a class="inline-block p-5"
 						href="#"><img src="assets/images/vimeo.png" alt="vimeo"></a> <a class=
-						"inline-block p-5" href="#"><img src="assets/Images/youtube.png" alt="youtube"></a>
+						"inline-block p-5" href="#"><img src="assets/umages/youtube.png" alt="youtube"></a>
 					</div>
 					<!-- footer -->
 
