--- a/photography.html
+++ b/photography.html
@@ -21,7 +21,7 @@
 		<div class="w-full">
 			<header class="header p-3 w-full">
 				<a href="index.html"><img src=
-				"assets/Images/Steffi-Ann%20Mendoza.png" alt="logo"></a> <input class="menu-btn" id=
+				"assets/images/Steffi-Ann%20Mendoza.png" alt="logo"></a> <input class="menu-btn" id=
 				"menu-btn" type="checkbox"> <label class="menu-icon text" for=
 				"menu-btn"><span class="navicon"></span></label>
 				<ul class="menu text-white" style=
@@ -67,55 +67,55 @@
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2016" data-lity data-lity-desc=
 							"Four friends double exposed over flowers." data-title="Four Friends"
-							href="gallery/Image19.jpg"><img alt=
-							"Four friends double exposed over flowers" src=
-							"gallery/Image19.jpg"></a>
+							href="gallery/Image19.jpg"><img src=
+							"gallery/Image19.jpg" alt=
+							"Four friends double exposed over flowers" ></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2016" data-lity data-lity-desc=
 							"A cat and a headless bird double exposure" data-title="Untitled" href=
-							"gallery/Image18.jpg"><img alt=
-							"A cat and a headless bird double exposure" src=
-							"gallery/Image18.jpg"></a>
+							"gallery/Image18.jpg"><img src=
+							"gallery/Image18.jpg" alt=
+							"A cat and a headless bird double exposure"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2016" data-lity data-lity-desc=
 							"Neon signs double exposed." data-title="Double" href=
-							"gallery/Image04.jpg"><img alt="Neon signs double exposed" src=
-							"gallery/Image04.jpg"></a>
+							"gallery/Image04.jpg"><img src=
+							"gallery/Image04.jpg" alt="Neon signs double exposed"> </a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity data-lity-desc=
 							"A boy sitting with his knees to his chest" data-title="John in Japan"
-							href="gallery/Image15.jpg"><img alt=
-							"A boy sitting with his knees to his chest" src=
-							"gallery/Image15.jpg"></a>
+							href="gallery/Image15.jpg"><img src=
+							"gallery/Image15.jpg" alt=
+							"A boy sitting with his knees to his chest"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2016" data-lity data-lity-desc=
 							"A woman with red hair holding a gun to her lips." data-title="Maritza"
-							href="gallery/Image06.jpg"><img alt=
-							"A woman with red hair holding a gun to her lips" src=
-							"gallery/Image06.jpg"></a>
+							href="gallery/Image06.jpg"><img src=
+							"gallery/Image06.jpg" alt=
+							"A woman with red hair holding a gun to her lips"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity data-lity-desc=
 							"Japanese train station double exposed with the train patrons."
-							data-title="Japanese Train Station" href="gallery/Image07.jpg"><img alt=
-							"Japanese train station double exposed with the train patrons" src=
-							"gallery/Image07.jpg"></a>
+							data-title="Japanese Train Station" href="gallery/Image07.jpg"><img src=
+							"gallery/Image07.jpg" alt=
+							"Japanese train station double exposed with the train patrons"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity data-lity-desc=
 							"Inside a Japanese train." data-title="Japanese Train Station 2" href=
-							"gallery/Image08.jpg"><img alt="Inside a Japanese train" src=
-							"gallery/Image08.jpg"></a>
+							"gallery/Image08.jpg"><img src=
+							"gallery/Image08.jpg"  alt="Inside a Japanese train"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
@@ -139,15 +139,15 @@
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2018" data-lity data-lity-desc=
 							"A headless bird over a bed of flowers" data-title="Untitled" href=
-							"gallery/Image12.jpg"><img alt="A headless bird over a bed of flowers"
-							src="gallery/Image12.jpg"></a>
+							"gallery/Image12.jpg"><img
+							src="gallery/Image12.jpg" alt="A headless bird over a bed of flowers"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity data-lity-desc=
 							"A busy street in Akihabara" data-title="Akihabara" href=
-							"gallery/Image13.jpg"><img alt="A busy street in Akihabara" src=
-							"gallery/Image13.jpg"></a>
+							"gallery/Image13.jpg"><img src=
+							"gallery/Image13.jpg" alt="A busy street in Akihabara"></a>
 						</div>
 					</div>
 				</div>
@@ -196,7 +196,7 @@
 						"assets/images/twitter.png" alt="twitter"></a> <a class="inline-block p-5" href=
 						"#"><img src="assets/images/linkdin.png" alt="linkdin"></a> <a class="inline-block p-5"
 						href="#"><img src="assets/images/vimeo.png" alt="vimeo"></a> <a class=
-						"inline-block p-5" href="#"><img src="assets/Images/youtube.png" alt="youtube"></a>
+						"inline-block p-5" href="#"><img src="assets/images/youtube.png" alt="youtube"></a>
 					</div>
 					<!-- footer -->
 
