--- a/photography.html
+++ b/photography.html
@@ -88,65 +88,64 @@
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2017" data-lity data-lity-desc=
+							<a href="gallery/Image15.jpg" data-desc="2017" data-lity data-lity-desc=
 							"A boy sitting with his knees to his chest" data-title="John in Japan"
-							href="gallery/Image15.jpg"><img src=
+							><img src=
 							"gallery/Image15.jpg" alt=
 							"A boy sitting with his knees to his chest"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2016" data-lity data-lity-desc=
+							<a href="gallery/Image06.jpg" data-desc="2016" data-lity data-lity-desc=
 							"A woman with red hair holding a gun to her lips." data-title="Maritza"
-							href="gallery/Image06.jpg"><img src=
+							><img src=
 							"gallery/Image06.jpg" alt=
 							"A woman with red hair holding a gun to her lips"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2017" data-lity data-lity-desc=
+							<a href="gallery/Image07.jpg" data-desc="2017" data-lity data-lity-desc=
 							"Japanese train station double exposed with the train patrons."
-							data-title="Japanese Train Station" href="gallery/Image07.jpg"><img src=
+							data-title="Japanese Train Station" ><img src=
 							"gallery/Image07.jpg" alt=
 							"Japanese train station double exposed with the train patrons"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2017" data-lity data-lity-desc=
-							"Inside a Japanese train." data-title="Japanese Train Station 2" href=
-							"gallery/Image08.jpg"><img src=
+							<a href=
+							"gallery/Image08.jpg" data-desc="2017" data-lity data-lity-desc=
+							"Inside a Japanese train." data-title="Japanese Train Station 2" ><img src=
 							"gallery/Image08.jpg"  alt="Inside a Japanese train"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2017" data-lity data-lity-desc=
+							<a href="gallery/Image09.jpg" data-desc="2017" data-lity data-lity-desc=
 							"A train coming into the station." data-title="Japanese Train Station 3"
-							href="gallery/Image09.jpg"><img src="gallery/Image09.jpg"></a>
+							><img src="gallery/Image09.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a alt="A train coming into the station" data-desc="2017" data-lity
-							data-lity-desc="A Japanese Shrine" data-title="Untitled" href=
-							"gallery/Image10.jpg"><img src="gallery/Image10.jpg"></a>
+							<a href="gallery/Image10.jpg" data-desc="2017" data-lity
+							data-lity-desc="A Japanese Shrine" data-title="Untitled" ><img src="gallery/Image10.jpg" alt="A Japanese Shrine"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a alt="Japanese paper cranes" data-desc="2017" data-lity
-							data-lity-desc="Japanese paper cranes." data-title="Cranes" href=
-							"gallery/Image11.jpg"><img src="gallery/Image11.jpg"></a>
+							<a href=
+							"gallery/Image11.jpg"  data-desc="2017" data-lity
+							data-lity-desc="Japanese paper cranes." data-title="Cranes"><img src="gallery/Image11.jpg" alt="Japanese paper cranes"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2018" data-lity data-lity-desc=
-							"A headless bird over a bed of flowers" data-title="Untitled" href=
-							"gallery/Image12.jpg"><img
+							<a href=
+							"gallery/Image12.jpg" data-desc="2018" data-lity data-lity-desc=
+							"A headless bird over a bed of flowers" data-title="Untitled" ><img
 							src="gallery/Image12.jpg" alt="A headless bird over a bed of flowers"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2017" data-lity data-lity-desc=
-							"A busy street in Akihabara" data-title="Akihabara" href=
-							"gallery/Image13.jpg"><img src=
+							<a href=
+							"gallery/Image13.jpg" data-desc="2017" data-lity data-lity-desc=
+							"A busy street in Akihabara" data-title="Akihabara" ><img src=
 							"gallery/Image13.jpg" alt="A busy street in Akihabara"></a>
 						</div>
 					</div>
