--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						steffiann.mendoza@gmail.com
 					</p>
 
-					<div alt="socialMedia" class=
+					<div class=
 					"flex flex-col md:flex-row justify-between items-center pt-12 pl-12 pr-12 mb-32">
 						<a class="inline-block p-5" href="#"><img src=
 						"assets/images/twitter.png" alt="twitter"></a> <a class="inline-block p-5" href=
@@ -119,15 +119,15 @@
 					</div>
 					<!-- footer -->
 
-					<div alt="footerBar" class="w-screen flex justify-between items-center"
+					<div class="w-screen flex justify-between items-center"
 					style="background-color: #000000;">
 						<div alt="logo" class="mx-auto flex">
 							<a href="index.html"><img src=
 							"assets/images/Steffi-Ann%20Mendoza.png" alt="logo"></a>
 						</div>
 
-						<footer class="footer" class=
-						" text-l flex text-white justify-between sm:mx-auto md:text-5xl" style=
+						<footer class=
+						"text-l flex text-white justify-between sm:mx-auto md:text-5xl" style=
 						"font-family: Moon Flower,MoonFlower;">
 							© 2019 All Rights Reserved
 						</footer>
