--- a/motion.html
+++ b/motion.html
@@ -163,7 +163,7 @@
 						steffiann.mendoza@gmail.com
 					</p>
 
-					<div alt="socialMedia" class=
+					<div class=
 					"flex flex-col md:flex-row justify-between items-center pt-12 pl-12 pr-12 mb-32">
 						<a class="inline-block p-5" href="#"><img src=
 						"assets/images/twitter.png" alt="twitter"></a> <a class="inline-block p-5" href=
@@ -173,7 +173,7 @@
 					</div>
 					<!-- footer -->
 
-					<div alt="footerBar" class="w-screen flex justify-between items-center"
+					<div class="w-screen flex justify-between items-center"
 					style="background-color: #000000;">
 						<div alt="logo" class="mx-auto flex">
 							<a href="index.html"><img src=
