--- a/motion.html
+++ b/motion.html
@@ -180,7 +180,7 @@
 							"assets/images/Steffi-Ann%20Mendoza.png" alt="logo"></a>
 						</div>
 
-						<footer class="footer" class=
+						<footer class=
 						" text-l flex text-white justify-between sm:mx-auto md:text-5xl" style=
 						"font-family: Moon Flower,MoonFlower;">
 							© 2019 All Rights Reserved
