--- a/photography.html
+++ b/photography.html
@@ -65,38 +65,37 @@
 				<div class="container mx-auto">
 					<div class="flex flex-wrap w-full container mx-auto lg:-mx-4 mb-32">
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2016" data-lity data-lity-desc=
+							<a href="gallery/Image19.jpg" data-desc="2016" data-lity data-lity-desc=
 							"Four friends double exposed over flowers." data-title="Four Friends"
-							href="gallery/Image19.jpg"><img src=
-							"gallery/Image19.jpg" alt=
-							"Four friends double exposed over flowers" ></a>
+							><img src=
+							"Portfolio/gallery/Image19.jpg" alt=
+							"Four friends double exposed over flowers"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2016" data-lity data-lity-desc=
-							"A cat and a headless bird double exposure" data-title="Untitled" href=
-							"gallery/Image18.jpg"><img src=
+							<a href=
+							"gallery/Image18.jpg" data-lity data-desc="2016"  data-lity-desc=
+							"A cat and a headless bird double exposure" data-title="Untitled"><img src=
 							"gallery/Image18.jpg" alt=
 							"A cat and a headless bird double exposure"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2016" data-lity data-lity-desc=
-							"Neon signs double exposed." data-title="Double" href=
-							"gallery/Image04.jpg"><img src=
-							"gallery/Image04.jpg" alt="Neon signs double exposed"> </a>
+							<a href=
+							"gallery/Image04.jpg" data-desc="2016" data-lity data-lity-desc=
+							"Neon signs double exposed." data-title="Double" ><img src="gallery/Image04.jpg" alt="Neon signs double exposed"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a href="gallery/Image15.jpg" data-desc="2017" data-lity data-lity-desc=
-							"A boy sitting with his knees to his chest" data-title="John in Japan"
-							><img src=
+							<a href="gallery/Image15.jpg" data-lity data-desc="2017" data-lity data-lity-desc=
+							"A boy sitting with his knees to his chest" data-title="John in Japan">
+							<img src=
 							"gallery/Image15.jpg" alt=
 							"A boy sitting with his knees to his chest"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a href="gallery/Image06.jpg" data-desc="2016" data-lity data-lity-desc=
+							<a href="gallery/Image06.jpg" data-lity data-desc="2016" data-lity-desc=
 							"A woman with red hair holding a gun to her lips." data-title="Maritza"
 							><img src=
 							"gallery/Image06.jpg" alt=
@@ -104,7 +103,7 @@
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a href="gallery/Image07.jpg" data-desc="2017" data-lity data-lity-desc=
+							<a href="gallery/Image07.jpg" data-lity data-desc="2017" data-lity-desc=
 							"Japanese train station double exposed with the train patrons."
 							data-title="Japanese Train Station" ><img src=
 							"gallery/Image07.jpg" alt=
@@ -121,12 +120,12 @@
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a href="gallery/Image09.jpg" data-desc="2017" data-lity data-lity-desc=
 							"A train coming into the station." data-title="Japanese Train Station 3"
-							><img src="gallery/Image09.jpg"></a>
+							><img src="gallery/Image09.jpg" alt="A train coming into the station"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a href="gallery/Image10.jpg" data-desc="2017" data-lity
-							data-lity-desc="A Japanese Shrine" data-title="Untitled" ><img src="gallery/Image10.jpg" alt="A Japanese Shrine"></a>
+							data-lity-desc="A Japanese Shrine" data-title="Untitled"><img src="gallery/Image10.jpg" alt="A Japanese Shrine"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
