--- a/motion.html
+++ b/motion.html
@@ -169,7 +169,7 @@
 						"assets/images/twitter.png" alt="twitter"></a> <a class="inline-block p-5" href=
 						"#"><img src="assets/images/linkdin.png" alt="linkdin"></a> <a class="inline-block p-5"
 						href="#"><img src="assets/images/vimeo.png" alt="vimeo"></a> <a class=
-						"inline-block p-5" href="#"><img src="assets/umages/youtube.png" alt="youtube"></a>
+						"inline-block p-5" href="#"><img src="assets/images/youtube.png" alt="youtube"></a>
 					</div>
 					<!-- footer -->
 
@@ -181,7 +181,7 @@
 						</div>
 
 						<footer class=
-						" text-l flex text-white justify-between sm:mx-auto md:text-5xl" style=
+						"text-l flex text-white justify-between sm:mx-auto md:text-5xl" style=
 						"font-family: Moon Flower,MoonFlower;">
 							© 2019 All Rights Reserved
 						</footer>
