--- a/photography.html
+++ b/photography.html
@@ -65,16 +65,16 @@
 				<div class="container mx-auto">
 					<div class="flex flex-wrap w-full container mx-auto lg:-mx-4 mb-32">
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a href="gallery/Image19.jpg" data-desc="2016" data-lity data-lity-desc=
+							<a href="assets/images/gallery/Image19.jpg" data-desc="2016" data-lity data-lity-desc=
 							"Four friends double exposed over flowers." data-title="Four Friends"
 							><img src=
-							"Portfolio/gallery/Image19.jpg" alt=
+							"assets/images/gallery/Image19.jpg" alt=
 							"Four friends double exposed over flowers"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a href=
-							"gallery/Image18.jpg" data-lity data-desc="2016"  data-lity-desc=
+							"assets/images/gallery/Image18.jpg" data-lity data-desc="2016"  data-lity-desc=
 							"A cat and a headless bird double exposure" data-title="Untitled"><img src=
 							"gallery/Image18.jpg" alt=
 							"A cat and a headless bird double exposure"></a>
@@ -82,70 +82,70 @@
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a href=
-							"gallery/Image04.jpg" data-desc="2016" data-lity data-lity-desc=
-							"Neon signs double exposed." data-title="Double" ><img src="gallery/Image04.jpg" alt="Neon signs double exposed"></a>
+							"assets/images/gallery/Image04.jpg" data-desc="2016" data-lity data-lity-desc=
+							"Neon signs double exposed." data-title="Double" ><img src="assets/images/gallery/Image04.jpg" alt="Neon signs double exposed"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a href="gallery/Image15.jpg" data-lity data-desc="2017" data-lity data-lity-desc=
+							<a href="assets/images/gallery/Image15.jpg" data-lity data-desc="2017" data-lity data-lity-desc=
 							"A boy sitting with his knees to his chest" data-title="John in Japan">
 							<img src=
-							"gallery/Image15.jpg" alt=
+							"assets/images/gallery/Image15.jpg" alt=
 							"A boy sitting with his knees to his chest"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a href="gallery/Image06.jpg" data-lity data-desc="2016" data-lity-desc=
+							<a href="assets/images/gallery/Image06.jpg" data-lity data-desc="2016" data-lity-desc=
 							"A woman with red hair holding a gun to her lips." data-title="Maritza"
 							><img src=
-							"gallery/Image06.jpg" alt=
+							"assets/images/gallery/Image06.jpg" alt=
 							"A woman with red hair holding a gun to her lips"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a href="gallery/Image07.jpg" data-lity data-desc="2017" data-lity-desc=
+							<a href="assets/images/gallery/Image07.jpg" data-lity data-desc="2017" data-lity-desc=
 							"Japanese train station double exposed with the train patrons."
 							data-title="Japanese Train Station" ><img src=
-							"gallery/Image07.jpg" alt=
+							"assets/images/gallery/Image07.jpg" alt=
 							"Japanese train station double exposed with the train patrons"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a href=
-							"gallery/Image08.jpg" data-desc="2017" data-lity data-lity-desc=
+							"assets/images/gallery/Image08.jpg" data-desc="2017" data-lity data-lity-desc=
 							"Inside a Japanese train." data-title="Japanese Train Station 2" ><img src=
-							"gallery/Image08.jpg"  alt="Inside a Japanese train"></a>
+							"assets/images/gallery/Image08.jpg"  alt="Inside a Japanese train"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a href="gallery/Image09.jpg" data-desc="2017" data-lity data-lity-desc=
+							<a href="assets/images/gallery/Image09.jpg" data-desc="2017" data-lity data-lity-desc=
 							"A train coming into the station." data-title="Japanese Train Station 3"
-							><img src="gallery/Image09.jpg" alt="A train coming into the station"></a>
+							><img src="assets/images/gallery/Image09.jpg" alt="A train coming into the station"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a href="gallery/Image10.jpg" data-desc="2017" data-lity
+							<a href="assets/images/gallery/Image10.jpg" data-desc="2017" data-lity
 							data-lity-desc="A Japanese Shrine" data-title="Untitled"><img src="gallery/Image10.jpg" alt="A Japanese Shrine"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a href=
-							"gallery/Image11.jpg"  data-desc="2017" data-lity
-							data-lity-desc="Japanese paper cranes." data-title="Cranes"><img src="gallery/Image11.jpg" alt="Japanese paper cranes"></a>
+							"assets/images/gallery/Image11.jpg"  data-desc="2017" data-lity
+							data-lity-desc="Japanese paper cranes." data-title="Cranes"><img src="assets/images/gallery/Image11.jpg" alt="Japanese paper cranes"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a href=
-							"gallery/Image12.jpg" data-desc="2018" data-lity data-lity-desc=
+							"assets/images/gallery/Image12.jpg" data-desc="2018" data-lity data-lity-desc=
 							"A headless bird over a bed of flowers" data-title="Untitled" ><img
-							src="gallery/Image12.jpg" alt="A headless bird over a bed of flowers"></a>
+							src="assets/images/gallery/Image12.jpg" alt="A headless bird over a bed of flowers"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a href=
-							"gallery/Image13.jpg" data-desc="2017" data-lity data-lity-desc=
+							"assets/images/gallery/Image13.jpg" data-desc="2017" data-lity data-lity-desc=
 							"A busy street in Akihabara" data-title="Akihabara" ><img src=
-							"gallery/Image13.jpg" alt="A busy street in Akihabara"></a>
+							"assets/images/gallery/Image13.jpg" alt="A busy street in Akihabara"></a>
 						</div>
 					</div>
 				</div>
