--- a/photography.html
+++ b/photography.html
@@ -76,7 +76,7 @@
 							<a href=
 							"assets/images/gallery/Image18.jpg" data-lity data-desc="2016"  data-lity-desc=
 							"A cat and a headless bird double exposure" data-title="Untitled"><img src=
-							"gallery/Image18.jpg" alt=
+							"assets/images/gallery/Image18.jpg" alt=
 							"A cat and a headless bird double exposure"></a>
 						</div>
 
@@ -125,7 +125,7 @@
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a href="assets/images/gallery/Image10.jpg" data-desc="2017" data-lity
-							data-lity-desc="A Japanese Shrine" data-title="Untitled"><img src="gallery/Image10.jpg" alt="A Japanese Shrine"></a>
+							data-lity-desc="A Japanese Shrine" data-title="Untitled"><img src="assets/images/gallery/Image10.jpg" alt="A Japanese Shrine"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
