Revert "Update index.html"
This reverts commit eec04d2b9247d57a19544952eec491632dbcbe3f.

--- a/Portfolio_Final_SMendoza/index.html
+++ b/Portfolio_Final_SMendoza/index.html
@@ -65,7 +65,7 @@
 <div class="container-xl mx-auto flex-col flex overflow bg-bottom mt-2" style="height: 100%;
     background: linear-gradient(180deg, #ffffff 50%, #000000 50%);" alt="backgroundBreak">
 	<div class="container-sm h-auto md:container-xl mx-auto pb-2" alt="portrait">
-		<center><img src="assets/images/portrait.png" class="content-center h-auto"></center>
+		<center><img src="assets/images/portrait.png" id="portrait" class="content-center h-1/2 md:h-full"></center>
 	</div>
 	<div class="font-sans container block mx-auto text-white text-lg flex-col p-3" alt="aboutText" style="font-family: 'Roboto';">
 		<p class="">
