--- a/index.html
+++ b/index.html
@@ -18,25 +18,30 @@
 		</title>
 	</head>
 	<body>
-		<header class="header p-3">
-			<a href="index.html" id="logo"><img src=
-			"assets/images/Steffi-Ann%20Mendoza.png" alt="logo"></a> <input class="menu-btn" id=
-			"menu-btn" type="checkbox"> <label class="menu-icon text" for=
-			"menu-btn"><span class="navicon"></span></label>
-			<ul class="menu text-white" style=
-			"font-family: Moon Flower,MoonFlower; font-size: 35px;">
-				<li>
-					<a href="motion.html">Motion</a>
-				</li>
+		<header class="header p-3 flex justify-between">
+			<a href="index.html" id="logo" class="flex-initial self-center"><img src=
+			"assets/images/Steffi-Ann%20Mendoza.png" alt="logo"></a> 
 
-				<li>
-					<a href="photography.html">Photography</a>
-				</li>
+			<input class="menu-btn flex" id=
+			"menu-btn" type="checkbox"> 
+				<label class="menu-icon text self-center" for=
+			"menu-btn">
+			<span class="navicon"></span>
+				</label>
+				<ul class="menu text-white self-center" style=
+				"font-family: serif; font-size: 25px;">
+					<li>
+						<a href="motion.html">Motion</a>
+					</li>
 
-				<li>
-					<a href="#contact">Contact</a>
-				</li>
-			</ul>
+					<li>
+						<a href="photography.html">Photography</a>
+					</li>
+
+					<li>
+						<a href="#contact">Contact</a>
+					</li>
+				</ul>
 		</header>
 
 		<nav class="navBarDesktop" class=
